# btbpy

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: test-build.yml
.github/workflows/: build-conda.yml  build-pypi.yml  cibuildwheels.yml
btbpy/: __init__.py  algo_smooth.cpp  algo_smooth.pyx  createGrid.py  kernelSmoothing.py
btbpy/data/: commune_reg_04_2018.dbf  commune_reg_04_2018.prj  commune_reg_04_2018.shp  commune_reg_04_2018.shx  dfPrix_SP95_2016.csv  reunion_emprise_grid200m_epsg32740.csv  reunion_epsg32740.csv  reunion_grid200m_epsg32740.csv
btbpy/examples/: example.ipynb
docs/source/: conf.py  index.rst
recipe/: meta.yaml
