[metadata]
name = btbpy
author = Julien Jamme, Arlindo Dos Santos, François Sémécurbe, Lino Galiana
author_email = julien.jamme@protonmail.com
maintainer = Julien Jamme
maintainer_email = julien.jamme@protonmail.com
version = 0.1.0
url = https://github.com/InseeFrLab/btbpy/
description = Smooth geographical data.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Cython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Geography
    Topic :: Software Development
    Topic :: Utilities
keywords =
    smooth
    geography
    kernel
    smoothing

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
packages = find:
package_dir =
    =src
include_package_data = True
zip_safe = False
install_requires =
    numpy >=1.13.3
    pandas
    geopandas
setup_requires = Cython

[options.package_data]
* = *.csv, *.shp, *.shx, *.prj, *.dbf

[options.packages.find]
where = .
exclude =
    tests
    extern

[tool:pytest]
junit_family=xunit2
testpaths =
    tests
